--- a/postit.html
+++ b/postit.html
@@ -38,43 +38,43 @@
   <body>
     <main>
       <section>
-        <article class="post post-1">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-1" id="post1">
+          <i class="fas fa-thumbtack" id="punteruolo1"></i>
           <h2><span style="font-weight: bold">Task #1</span></h2>
           <h3>Creare i postit</h3>
         </article>
-        <article class="post post-2">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-2" id="post2">
+          <i class="fas fa-thumbtack" id="punteruolo2"></i>
           <h2><span style="font-weight: bold">Task #2</span></h2>
           <h3>Colorarli</h3>
         </article>
-        <article class="post post-3">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-3" id="post3">
+          <i class="fas fa-thumbtack" id="punteruolo3"></i>
           <h2><span style="font-weight: bold">Task #3</span></h2>
           <h3>Affiancarli</h3>
         </article>
-        <article class="post post-4">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-4" id="post4">
+          <i class="fas fa-thumbtack" id="punteruolo4"></i>
           <h2><span style="font-weight: bold">Task #4</span></h2>
           <h3>Spaziarli</h3>
         </article>
-        <article class="post post-5">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-5" id="post5">
+          <i class="fas fa-thumbtack" id="punteruolo5"></i>
           <h2><span style="font-weight: bold">Task #5</span></h2>
           <h3>Ombreggiarli</h3>
         </article>
-        <article class="post post-6">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-6" id="post6">
+          <i class="fas fa-thumbtack" id="punteruolo6"></i>
           <h2><span style="font-weight: bold">Task #6</span></h2>
           <h3>Ruotarli</h3>
         </article>
-        <article class="post post-7">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-7" id="post7">
+          <i class="fas fa-thumbtack" id="punteruolo7"></i>
           <h2><span style="font-weight: bold">Task #7</span></h2>
           <h3>Animarli</h3>
         </article>
-        <article class="post post-8">
-          <i class="fas fa-thumbtack" id="punteruolo"></i>
+        <article class="post post-8" id="post8">
+          <i class="fas fa-thumbtack" id="punteruolo8"></i>
           <h2><span style="font-weight: bold">Task #8</span></h2>
           <h3>Testarli</h3>
         </article>
